--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@headlessui/react": "^2.2.1",
         "@inertiajs/react": "^2.0.5",
+        "@radix-ui/react-accordion": "^1.2.7",
         "@radix-ui/react-progress": "^1.1.2",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.1.2",
@@ -28,6 +29,7 @@
         "highcharts": "^12.1.2",
         "highcharts-react-official": "^3.2.1",
         "lucide-react": "^0.486.0",
+        "motion": "^12.7.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-select": "^5.10.1",
