--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "@headlessui/react": "^2.2.1",
         "@inertiajs/react": "^2.0.5",
         "@radix-ui/react-accordion": "^1.2.7",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-label": "^2.1.4",
         "@radix-ui/react-progress": "^1.1.2",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.1.2",
@@ -31,9 +34,12 @@
         "lucide-react": "^0.486.0",
         "motion": "^12.7.4",
         "react": "^19.1.0",
+        "react-data-table-component": "^7.7.0",
+        "react-datepicker": "^8.3.0",
         "react-dom": "^19.1.0",
         "react-select": "^5.10.1",
         "sonner": "^2.0.3",
+        "styled-components": "^6.1.18",
         "tailwind-merge": "^3.1.0",
         "tw-animate-css": "^1.2.5",
         "typescript": "^5.8.2",
